# STAI-tuned

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  deps_to_remove.txt  pyproject.toml  pyproject_old.toml  requirements.txt  setup.cfg
.run/: __main__.run.xml
_arnas_testing/: test_alexs_dsprites_loaders.py
demo/: config.yaml  demo_dummy_jobs.py  main.py
demo/autogenerated/: [10]_bdf752de3e955aa6421d_autogenerated_config.yaml  [11]_bdf752de3e955aa6421d_autogenerated_config.yaml  [12]_bdf752de3e955aa6421d_autogenerated_config.yaml  [1]_916690237603439da184_autogenerated_config.yaml  [1]_bdf752de3e955aa6421d_autogenerated_config.yaml  [2]_916690237603439da184_autogenerated_config.yaml  [2]_bdf752de3e955aa6421d_autogenerated_config.yaml  [3]_916690237603439da184_autogenerated_config.yaml  [3]_bdf752de3e955aa6421d_autogenerated_config.yaml  [4]_916690237603439da184_autogenerated_config.yaml  [4]_bdf752de3e955aa6421d_autogenerated_config.yaml  [5]_916690237603439da184_autogenerated_config.yaml  [5]_bdf752de3e955aa6421d_autogenerated_config.yaml  [6]_916690237603439da184_autogenerated_config.yaml  [6]_bdf752de3e955aa6421d_autogenerated_config.yaml  [7]_916690237603439da184_autogenerated_config.yaml  [7]_bdf752de3e955aa6421d_autogenerated_config.yaml  [8]_916690237603439da184_autogenerated_config.yaml  [8]_bdf752de3e955aa6421d_autogenerated_config.yaml  [9]_916690237603439da184_autogenerated_config.yaml  [9]_bdf752de3e955aa6421d_autogenerated_config.yaml
demo/stuned_demo/basic/: config.yaml  config_wandb.yaml  main.py
demo/stuned_demo/basic/autogenerated/: [10]_93cd7e08ed42ca0db056_autogenerated_config.yaml  [10]_ae51c2a9baa2dc90b456_autogenerated_config.yaml  [10]_e20c005b1c321ed02cf7_autogenerated_config.yaml  [11]_93cd7e08ed42ca0db056_autogenerated_config.yaml  [11]_ae51c2a9baa2dc90b456_autogenerated_config.yaml  [11]_e20c005b1c321ed02cf7_autogenerated_config.yaml  [12]_93cd7e08ed42ca0db056_autogenerated_config.yaml  [12]_ae51c2a9baa2dc90b456_autogenerated_config.yaml  [12]_e20c005b1c321ed02cf7_autogenerated_config.yaml  [13]_93cd7e08ed42ca0db056_autogenerated_config.yaml  [13]_ae51c2a9baa2dc90b456_autogenerated_config.yaml  [13]_e20c005b1c321ed02cf7_autogenerated_config.yaml  [14]_93cd7e08ed42ca0db056_autogenerated_config.yaml  [14]_ae51c2a9baa2dc90b456_autogenerated_config.yaml  [14]_e20c005b1c321ed02cf7_autogenerated_config.yaml  [15]_93cd7e08ed42ca0db056_autogenerated_config.yaml  [15]_ae51c2a9baa2dc90b456_autogenerated_config.yaml  [15]_e20c005b1c321ed02cf7_autogenerated_config.yaml  [16]_93cd7e08ed42ca0db056_autogenerated_config.yaml  [16]_ae51c2a9baa2dc90b456_autogenerated_config.yaml  [16]_e20c005b1c321ed02cf7_autogenerated_config.yaml  [17]_93cd7e08ed42ca0db056_autogenerated_config.yaml  [17]_ae51c2a9baa2dc90b456_autogenerated_config.yaml  [17]_e20c005b1c321ed02cf7_autogenerated_config.yaml  [18]_93cd7e08ed42ca0db056_autogenerated_config.yaml  [18]_ae51c2a9baa2dc90b456_autogenerated_config.yaml  [18]_e20c005b1c321ed02cf7_autogenerated_config.yaml  [19]_93cd7e08ed42ca0db056_autogenerated_config.yaml  [19]_ae51c2a9baa2dc90b456_autogenerated_config.yaml  [19]_e20c005b1c321ed02cf7_autogenerated_config.yaml  [1]_0f014827744731a47e32_autogenerated_config.yaml  [1]_7011eb0c739db80e7367_autogenerated_config.yaml  [1]_93cd7e08ed42ca0db056_autogenerated_config.yaml  [1]_ae51c2a9baa2dc90b456_autogenerated_config.yaml  [1]_e20c005b1c321ed02cf7_autogenerated_config.yaml  [20]_93cd7e08ed42ca0db056_autogenerated_config.yaml  [20]_ae51c2a9baa2dc90b456_autogenerated_config.yaml  [20]_e20c005b1c321ed02cf7_autogenerated_config.yaml  [21]_93cd7e08ed42ca0db056_autogenerated_config.yaml  [21]_ae51c2a9baa2dc90b456_autogenerated_config.yaml  (+64 more)
demo/test_sockets/: sample_job.py
experiments/unknown_experiment/2023-08-19_17:58:16.782848---_---113359/: stderr.txt
experiments/unknown_experiment/2023-08-19_18:06:14.716088---_---116944/: stderr.txt  stdout.txt
experiments/unknown_experiment/2023-08-19_18:06:35.381019---_---117037/: stderr.txt  stdout.txt
experiments/unknown_experiment/2023-08-19_18:06:48.644740---_---117129/: stderr.txt  stdout.txt
experiments/unknown_experiment/2023-08-19_18:07:03.638670---_---117188/: stderr.txt  stdout.txt
experiments/unknown_experiment/2023-08-19_18:07:26.084870---_---117387/: stderr.txt  stdout.txt
experiments/unknown_experiment/2023-08-19_18:39:28.939400---_---123450/: stderr.txt  stdout.txt
experiments/unknown_experiment/2023-08-19_18:46:48.269136---_---125851/: stderr.txt
notebooks/: features_labeller_example.ipynb
src/stuned/: GSheetBatchUpdater.py  collate_results.py  gsheet_batch_updater.py  job.py  job_manager.py  settings.py
src/stuned/datasets/: common.py  dsprites.py  features_labeller.py  tiny_imagenet.py  utils.py
src/stuned/datasets/tests/: test_datasets.py
src/stuned/local_datasets/: base.py  dsprites.py  features_labeller.py  from_folder.py  imagenet1k.py  transforms.py  utils.py
src/stuned/local_datasets/hugging_face_scripts/: imagenet1k_val.py
src/stuned/run_cmd/: main.py  runner.py
src/stuned/run_from_csv/: README.md  __init__.py  __main__.py  gsheet_macros.js
src/stuned/test_sockets/: sample_job.py
src/stuned/tests/: test_for_utility.py  test_logger.py
src/stuned/utility/: ai_center_cluster_specific.py  configs.py  constants.py  helpers_for_main.py  helpers_for_tests.py  imports.py  local_processing_utils.py  logger.py  message_client.py  utils.py
tests/: config_reading.py  test_config.yaml
