[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stuned"
version = "0.1.0"
description = ""
authors = [ "Your Name <you@example.com>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "stuned"
from = "src"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
deepdiff = ">=5.8.1"
filelock = ">=3.8.0"
gitpython = ">=3.1.27"
gspread = ">=5.7.2"
numpy = ">=1.21.1"
pandas = ">=1.4.3"
psutil = ">=5.9.1"
pydrive2 = ">=1.15.1"
pyyaml = ">=6.0"
torch = ">=1.13.1,<=2.0.0"
wandb = ">=0.13.10"
watchdog = ">=3.0.0"
